# logiksim

./: .clang-format  .clang-tidy  .clangd.in  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  ruff.toml
example_circuits/: 16_bit_counter.ls2  16_bit_sync_counter.ls2  CMakeLists.txt  circuit1_connected_slowdown.ls2  counter_display_1_to_4.ls2  counter_display_1_to_4_2.ls2  counter_display_1_to_4_times_8.ls2  counter_stops_clock.ls2  elements_wire_example.ls2  flipflop_from_scratch.ls2  pattern_generator.ls2
example_circuits/2.1.0/: 16_bit_counter.ls2  all_components.ls2  benchmark_01_1200x800.ls2  benchmark_02_1200x800.ls2  counter_display_1_to_4.ls2  counter_stops_clock.ls2  jk-flip-flop.ls2
example_circuits/2.2.0/: all_components.ls2  counter_display_1_to_4_base64.ls2  counter_display_1_to_4_gzip.ls2  counter_display_1_to_4_json.ls2  jk-flip-flop.ls2  windows_filename_challenge.7z
example_circuits/errors/: error_b64_padding.ls2  error_b64_symbol.ls2  error_gzip_crc.ls2  error_no_version.ls2  error_version_10.2.0.ls2  error_version_unknown.ls2
resources/: CMakeLists.txt
resources/fonts/: LICENSE_lucide  lucide_0.562.0.css
src/: CMakeLists.txt  algorithm.cpp  algorithm.h  algorithms.h  allocated_size.h  base64.cpp  base64.h  circuit.cpp  circuit.h  circuit2.cpp  circuit2.h  circuit_description.h  circuit_example.cpp  circuit_example.h  circuit_index.cpp  circuit_index.h  circuit_layout.cpp  circuit_layout.h  circuit_old.h  circuit_vocabulary.h  circuit_widget.cpp  circuit_widget.h  circuit_widget_base.cpp  circuit_widget_base.h  circular_buffer.h  collision.cpp  collision.h  concept.h  concepts.h  context_guard.cpp  context_guard.h  copy_paste_clipboard.cpp  copy_paste_clipboard.h  default_element_definition.cpp  default_element_definition.h  difference_type.cpp  difference_type.h  drag_handle.cpp  drag_handle.h  editable_circuit.cpp  (+204 more)
src/algorithm/: accumulate.h  adjacent_count_if.h  all_equal.cpp  all_equal.h  checked_deref.h  compare_sorted.cpp  compare_sorted.h  contains.cpp  contains.h  copy_adjacent_if.cpp  copy_adjacent_if.h  create_array.cpp  create_array.h  depth_first_visitor.cpp  depth_first_visitor.h  distance_fast.cpp  fmt_join.cpp  fmt_join.h  has_duplicates_quadratic.cpp  has_duplicates_quadratic.h  make_unique.cpp  make_unique.h  merged_any_of.cpp  merged_any_of.h  merged_for_each.cpp  merged_for_each.h  merged_none_of.cpp  merged_none_of.h  narrow_integral.h  overload.cpp  overload.h  path_conversion.cpp  path_conversion.h  pop_while.h  random_select.cpp  range.cpp  range.h  range_extended.cpp  range_extended.h  range_step.cpp  (+20 more)
src/allocated_size/: ankerl_unordered_dense.cpp  ankerl_unordered_dense.h  folly_small_vector.cpp  folly_small_vector.h  std_optional.cpp  std_optional.h  std_string.cpp  std_string.h  std_vector.h  tracked_resource.cpp  tracked_resource.h  trait.cpp  trait.h
src/benchmark/: CMakeLists.txt  main_bechmark.cpp  main_benchmark.cpp  render_line_scene.cpp  render_line_scene.h  schematic_creation.cpp  schematic_creation.h  simulation_runtime.cpp  simulation_runtime.h
src/benchmark2/: CMakeLists.txt
src/cli/: CMakeLists.txt  main_cli.cpp
src/concept/: explicitly_convertible.cpp  explicitly_convertible.h  input_range.cpp  input_range.h  integral.cpp  integral.h  member_format_function.cpp  member_format_function.h  range_value_type.cpp
src/container/: circular_buffer.cpp  circular_buffer.h  enum_map.h  spatial_point_index.cpp  spatial_point_index.h  static_vector.h  value_pointer.h
src/core/: CMakeLists.txt  base64.cpp  base64.h  circuit_description.cpp  circuit_description.h  circuit_example.cpp  circuit_example.h  circuit_ui_model.cpp  circuit_ui_model.h  copy_paste_clipboard.cpp  copy_paste_clipboard.h  default_element_definition.cpp  default_element_definition.h  editable_circuit.cpp  editable_circuit.h  event_counter.cpp  event_counter_multi.cpp  exception.cpp  executable_path.cpp  executable_path.h  file.cpp  file.h  font_style_property.cpp  font_style_property.h  gzip.cpp  gzip.h  interactive_simulation.cpp  interactive_simulation.h  layout.cpp  layout.h  layout_info.cpp  layout_info.h  layout_message.cpp  layout_message.h  layout_message_forward.cpp  layout_message_forward.h  layout_message_generation.cpp  layout_message_generation.h  layout_message_validator.cpp  layout_message_validator.h  (+63 more)
src/core_export/: CMakeLists.txt  logicsim_core_export.cpp  logicsim_core_export.h  main_verify.c  main_verify.cpp  source_list.cmake
src/core_shared/: CMakeLists.txt  logicsim_core_shared.cpp  logicsim_core_shared.h  main_verify.c  source_list.cmake
src/editable_circuit/: cache.cpp  cache.h  caches.cpp  caches.h  editable_circuit.cpp  editable_circuit.h  handler.cpp  handler.h  handler_example.cpp  handler_example.h  handler_examples.cpp  handler_examples.h  handlers.cpp  handlers.h  message.cpp  message.h  message_forward.h  message_sender.cpp  message_sender.h  messages.cpp  messages.h  messages_forward.h  sanitizer.cpp  sanitizer.h  selection.cpp  selection.h  selection_builder.cpp  selection_builder.h  selection_handle.cpp  selection_handle.h  selection_registrar.cpp  selection_registrar.h  spatial_cache.cpp  spatial_cache.h  type.cpp  type.h  types.cpp  types.h
src/format/: blend2d_type.cpp  blend2d_type.h  concept_string_view.cpp  container.cpp  container.h  enum.h  escape_ascii.cpp  escape_ascii.h  qt_type.cpp  qt_type.h  std_type.h  struct.cpp  struct.h  time.h  to_hex.h
src/fuzz_core/: CMakeLists.txt  main.cpp
src/geometry/: _test.cpp  _test.h  connection.cpp  connection.h  connection_count.cpp  connection_count.h  grid.cpp  (+37 more)
test/: CMakeLists.txt  algorithm_test.cpp  circuit.cpp  circuit_test.cpp  circular_buffer_test.cpp  collision_test.cpp  format_test.cpp  geometry_test.cpp  graph_test.cpp  iterator_adaptor_test.cpp  iterator_test.cpp  layout_test.cpp  line_tree_test.cpp  part_selection_test.cpp  random_test.cpp  range_test.cpp  schematic_test.cpp  segment_tree_test.cpp  simulation.cpp  simulation_test.cpp  sources.cmake  test_circuit.cpp  test_simulation.cpp  timer_test.cpp
(+1514 files in other folders)
