

# Example Circuits

file(GLOB_RECURSE
    LS_EXAMPLE_CIRCUIT_FILES
    RELATIVE ${PROJECT_SOURCE_DIR} 
    CONFIGURE_DEPENDS

    ${PROJECT_SOURCE_DIR}/example_circuits/**.ls2
)
FOREACH(LS_EXAMPLE_CIRCUIT_FILE ${LS_EXAMPLE_CIRCUIT_FILES})
    add_custom_command(
        OUTPUT ${CMAKE_BINARY_DIR}/${LS_EXAMPLE_CIRCUIT_FILE}
        COMMAND ${CMAKE_COMMAND} -E copy
            ${PROJECT_SOURCE_DIR}/${LS_EXAMPLE_CIRCUIT_FILE}
            ${CMAKE_BINARY_DIR}/${LS_EXAMPLE_CIRCUIT_FILE}
        DEPENDS ${PROJECT_SOURCE_DIR}/${LS_EXAMPLE_CIRCUIT_FILE}
  )
ENDFOREACH()
list(TRANSFORM LS_EXAMPLE_CIRCUIT_FILES PREPEND ${CMAKE_BINARY_DIR}/)

add_library(logiksim_example_circuits INTERFACE
    ${LS_EXAMPLE_CIRCUIT_FILES}
)




